# UniversityManagement

./: CMakeLists.txt  README.md  UniversityManagement.sln
.github/workflows/: ccpp.yml
UniversityManagement/: Display.cpp  Display.h  File.cpp  File.h  Messages.cpp  Messages.h  News.cpp  News.h  Parent.cpp  Parent.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  UniversityManagement.cpp  UniversityManagement.rc  UniversityManagement.vcxproj  UniversityManagement.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h  student.csv  teacher.csv
UniversityManagement/LoginData/: Student.csv  Teacher.csv
UniversityManagement/Messages/ParentMessages/: 1.txt  11716097.txt  11719462.txt
UniversityManagement/Messages/StudentMessages/: 1.txt  11715423.txt  11716097.txt  123.txt
UniversityManagement/Messages/TeacherMessages/: 1.txt  123.txt
UniversityManagement/News/: News.txt
